# django-sample

./: LICENSE  README.md  pyproject.toml
scmopt/: db.sqlite3  manage.py
scmopt/optshift/: apps.py  urls.py  views.py
scmopt/optshift/migrations/: 0001_initial.py
scmopt/optshift/templates/optshift/: about.html  base.html  home.html  post_confirm_delete.html  post_detail.html  post_form.html  user_posts.html
scmopt/scmopt/: asgi.py  settings.py  urls.py  wsgi.py
scmopt/users/: models.py  views.py
scmopt/users/migrations/: 0001_initial.py
scmopt/users/templates/users/: login.html  logout.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  profile.html  register.html
